[package]
name = "cloister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.0"
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
env_logger = "0.10.0"
zip = "0.6.4"
log = "0.4.17"
walkdir = "*"