[package]
name = "cloister"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/SpicyRicecaker/cloister.git"
description = "Zip non-git ignored files in a directory"
keywords = ["zip", "ignore", "git"]
authors = ["Andy Li <awesomenessisgolden@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0.70"
env_logger = "0.10.0"
zip = "0.6.4"
log = "0.4.17"
ignore = "0.4.20"
